fix layout issues

--- a/style.css
+++ b/style.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    border: 1px solid red;
 }
 
 body {
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: auto 1fr;
     grid-template-rows: 1fr auto 1fr;
 }
 
@@ -53,7 +52,8 @@ body > header {
 body > nav {
     grid-row: 2;
     grid-column: 1;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     width: max-content;
 }
 
@@ -63,31 +63,39 @@ body > main {
     grid-column: 2;
     min-height: 80vh;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr auto;
 }
 
 main > .books {
-    grid-column: 1;
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    padding: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+    grid-auto-rows: 15rem;
 }
 
 main > .control-board {
     grid-column: 2;
+    background-color: #1E3A8A;
 }
 
 .books > .card{
-    width: 10rem;
-    height: 15rem;
+    padding: 1rem;
     color: goldenrod;
     background-color: #1E3A8A;
     box-shadow: 2px 2px 3px black;
     border-radius: 1rem;
 }
 
+.card > h3 + p {
+    text-align: end;
+    font-size: 0.7rem;
+}
+
 /* Footer section */
 body > footer {
     grid-row: 3;
     grid-column: span 2;
+    background-color: #1E3A8A;
+    color: goldenrod;
 }
